--- a/assignment1.ipynb
+++ b/assignment1.ipynb
@@ -5,7 +5,7 @@
    "id": "e757ec2c-1a9a-49c7-928d-ae3e7eb9cefb",
    "metadata": {},
    "source": [
-    "## Assignment #1 DATA 730"
+    "## Assignment #1 DATA 730 - Amanda Pignataro"
    ]
   },
   {
@@ -31,8 +31,8 @@
    "source": [
     "*Fill out the checklist below once you have completed each task:*\n",
     "\n",
-    "- [ ] GitHub account\n",
-    "- [ ] SageMaker Studio Lab account"
+    "- [ ✓] GitHub account\n",
+    "- [ ✓] SageMaker Studio Lab account"
    ]
   },
   {
@@ -45,24 +45,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "158255df-7b9f-4cf4-b644-632172a5152e",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<span style=white-space:pre-wrap>'data730               *  /home/studio-lab-user/.conda/envs/data730'</span>"
+      ],
+      "text/latex": [
+       "'data730               *  /home/studio-lab-user/.conda/envs/data730'"
+      ],
+      "text/markdown": [
+       "<span style=white-space:pre-wrap>'data730               *  /home/studio-lab-user/.conda/envs/data730'</span>"
+      ],
+      "text/plain": [
+       "[1] \"data730               *  /home/studio-lab-user/.conda/envs/data730\""
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# uncomment the following line and execute this cell to demonstrate you have created the data730 conda environment\n",
-    "# system('conda env list | grep data730', intern = TRUE)"
+    "system('conda env list | grep data730', intern = TRUE)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "dc383334-802a-45bf-bc7e-150fdb963bd1",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# uncomment the following line and execute this cell to demonstrate that you have installed the tidymodels package\n",
-    "# library('tidymodels')"
+    "library('tidymodels')"
    ]
   },
   {
@@ -85,9 +108,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "52e16445-2854-49fe-8c5c-0dfd32e0a9ef",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# These functions simulate tossing a fair coin n_tosses number of times for n_iterations number of iterations\n",
@@ -109,10 +134,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "f0333b3d-7cc6-4fa0-813e-f2d4c863be23",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "'With a fair coin we would expect a deviation as large or larger than what we observed 8.5% of times'"
+      ],
+      "text/latex": [
+       "'With a fair coin we would expect a deviation as large or larger than what we observed 8.5\\% of times'"
+      ],
+      "text/markdown": [
+       "'With a fair coin we would expect a deviation as large or larger than what we observed 8.5% of times'"
+      ],
+      "text/plain": [
+       "[1] \"With a fair coin we would expect a deviation as large or larger than what we observed 8.5% of times\""
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# Let's do 10,000 experiments of 250 tosses and see how often our outcome deviates from what was actually observed (139 heads)\n",
     "\n",
@@ -135,19 +179,19 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c9bdfff1-23f3-41d7-84d7-231e25d4d163",
+   "cell_type": "markdown",
+   "id": "9a4dc2e3-b0f5-4658-8ce5-1e773db049fe",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Based on the experiment code run, the p-value is 8.5%, meaning the observed result (139 heads in 250 tosses) is somewhat unusual but not rare enough for me to say that the coin was unfair. In the article, Barry Blight calculated a p-value of less than 7%, which is closer to a point where I would gain suspicion. To conclude, the fairness of the coin remains uncertain, but the article points out there could be reason to suspect bias. "
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "R",
+   "display_name": ".conda-data730:R",
    "language": "R",
-   "name": "ir"
+   "name": "conda-env-.conda-data730-r"
   },
   "language_info": {
    "codemirror_mode": "r",
@@ -155,7 +199,7 @@
    "mimetype": "text/x-r-source",
    "name": "R",
    "pygments_lexer": "r",
-   "version": "4.2.3"
+   "version": "4.3.3"
   }
  },
  "nbformat": 4,
